--- a/wordpress/templates/wordpress-task.yaml
+++ b/wordpress/templates/wordpress-task.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       securityContext:
         runAsUser: 0
-        runAsGroup: 0  
+        fsGroup: 0  
       containers:
       - image: {{.Values.wpimage.name}}:{{.Values.wpimage.tag}} 
         name: wordpress
